audio file path change

--- a/araudio.html
+++ b/araudio.html
@@ -87,7 +87,7 @@
     };
 
     // 4) Create an Audio object for your beep/voice
-    const beepSound = new Audio("http://www.9mtx.com/ar/voice1.mp3"); 
+    const beepSound = new Audio("http://www.9mtx.com/ar_demo/voice1.mp3"); 
 
     navigator.mediaDevices.getUserMedia(constraints)
       .then(stream => {
