--- a/araudio.html
+++ b/araudio.html
@@ -108,7 +108,7 @@
     };
 
     // 4) Create an Audio object for your beep/voice
-    const beepSound = new Audio("http://www.9mtx.com/ar/voice1.mp3");
+    const beepSound = new Audio("https://www.9mtx.com/ar_demo/voice1.mp3");
 
     // When the beep finishes, resume scanning
     beepSound.addEventListener("ended", () => {
