--- a/araudio.html
+++ b/araudio.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <title>QR Code + Multiple Image Overlays</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=no" />
-
+  
   <!-- jsQR library for decoding real QR codes -->
   <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 
@@ -36,7 +36,7 @@
       padding: 0.5em;
       max-width: 90%;
     }
-    /* Button that appears after detecting a QR code */
+    /* Button that appears after detecting a QR code (only if audio isn't enabled yet) */
     #enableAudioBtn {
       display: none; /* hidden by default */
       position: absolute;
@@ -55,7 +55,7 @@
 <body>
   <div id="info">Initializing camera...</div>
 
-  <!-- A button that only appears AFTER detecting a QR code -->
+  <!-- A button that appears AFTER detecting a QR code, ONLY if audio isn't yet enabled -->
   <button id="enableAudioBtn">Enable Audio</button>
 
   <!-- Live camera feed -->
@@ -68,7 +68,10 @@
   <canvas id="scanCanvas"></canvas>
 
   <script>
-    // 1) A lookup map from QR code text -> image path
+    /************************************************************************
+     * 1) Lookup maps: codeToImage, codeToAudio
+     *    - Replace these URLs with your own as needed.
+     ************************************************************************/
     const codeToImage = {
       "01": "https://www.myrisu.com/us/img/method03.png",
       "02": "https://www.myrisu.com/us/img/method01.png",
@@ -79,7 +82,19 @@
       "20": "images/20.png"
     };
 
-    // 2) DOM references
+    const codeToAudio = {
+      "01": "https://www.9mtx.com/ar_demo/voice1.mp3",  // or "audio/01.mp3" etc
+      "02": "https://www.9mtx.com/ar_demo/voice2.mp3",
+      "03": "https://www.9mtx.com/ar_demo/voice3.mp3",
+      "04": "https://www.9mtx.com/ar_demo/voice4.mp3",
+      "05": "https://www.9mtx.com/ar_demo/voice5.mp3",
+      // ...
+      "20": "https://www.9mtx.com/ar_demo/voice20.mp3"
+    };
+
+    /************************************************************************
+     * 2) DOM References
+     ************************************************************************/
     const video = document.getElementById('video');
     const overlayCanvas = document.getElementById('overlayCanvas');
     const overlayCtx = overlayCanvas.getContext('2d');
@@ -90,15 +105,16 @@
 
     // We'll store info about the latest QR code detection here
     let detectionInfo = null;
-    let lastDetectionTime = 0;
-
-    // Keep track of whether scanning is active
+    // Manage scanning + audio states
     let scanningPaused = false;
+    let audioEnabled = false;  // We'll set to true after user allows audio once
 
     // We'll keep one Image() object that we update each time a new code is found.
     const overlayImg = new Image();
 
-    // 3) Request camera (rear camera at moderate resolution)
+    /************************************************************************
+     * 3) Request the camera
+     ************************************************************************/
     const constraints = {
       video: {
         facingMode: "environment",
@@ -106,15 +122,6 @@
         height: { ideal: 480 }
       }
     };
-
-    // 4) Create an Audio object for your beep/voice
-    const beepSound = new Audio("https://www.9mtx.com/ar_demo/voice1.mp3");
-
-    // When the beep finishes, resume scanning
-    beepSound.addEventListener("ended", () => {
-      enableAudioBtn.style.display = "none"; // Hide the button again
-      scanningPaused = false;                // Resume scanning
-    });
 
     navigator.mediaDevices.getUserMedia(constraints)
       .then(stream => {
@@ -127,75 +134,116 @@
         info.textContent = "Error accessing camera: " + err;
       });
 
-    // Handle click on "Enable Audio" button
-    enableAudioBtn.addEventListener("click", () => {
-      // Reset audio to start, then play
-      beepSound.currentTime = 0;
-      beepSound.play().catch(err => {
-        console.warn("Audio playback blocked or failed:", err);
-      });
+    /************************************************************************
+     * 4) Create an <audio> element on-the-fly
+     *    We'll swap out its .src for each detected code, if available.
+     ************************************************************************/
+    const qrAudio = new Audio();
+
+    // Once the audio ends, hide the button and resume scanning.
+    qrAudio.addEventListener("ended", () => {
+      enableAudioBtn.style.display = "none";
+      scanningPaused = false;
+      detectionInfo = null;  // Clear old detection so we can detect a fresh code
     });
 
-    function tick(timestamp) {
-      // If scanning is paused, skip scanning but keep drawing video
+    /************************************************************************
+     * 5) "Enable Audio" button logic
+     ************************************************************************/
+    enableAudioBtn.addEventListener("click", () => {
+      // If we haven't assigned a particular .src yet (unlikely, but just in case),
+      // fallback to something non-empty so iOS will allow playback.
+      if (!qrAudio.src) {
+        qrAudio.src = "https://www.9mtx.com/ar_demo/voice1.mp3";
+      }
+      qrAudio.currentTime = 0;
+      qrAudio.play()
+        .then(() => {
+          audioEnabled = true; // We have user permission now!
+        })
+        .catch(err => {
+          console.warn("Audio playback blocked or failed:", err);
+        });
+    });
+
+    /************************************************************************
+     * 6) Main Loop
+     ************************************************************************/
+    function tick() {
+      // 6a) Draw live video to overlayCanvas so user can see the camera feed
       if (video.readyState === video.HAVE_ENOUGH_DATA) {
         overlayCanvas.width = video.videoWidth;
         overlayCanvas.height = video.videoHeight;
         overlayCtx.drawImage(video, 0, 0, overlayCanvas.width, overlayCanvas.height);
       }
 
+      // 6b) If scanning is active, attempt to decode QR in scanCanvas
       if (!scanningPaused && video.readyState === video.HAVE_ENOUGH_DATA) {
-        // Adjust canvas sizes for scanning
         scanCanvas.width = video.videoWidth;
         scanCanvas.height = video.videoHeight;
 
-        // Rate-limit scanning: only scan if it's been more than 1s since last detection
-        if (timestamp - lastDetectionTime > 1000) {
-          scanCtx.drawImage(video, 0, 0, scanCanvas.width, scanCanvas.height);
-          const imageData = scanCtx.getImageData(0, 0, scanCanvas.width, scanCanvas.height);
-          const code = jsQR(imageData.data, scanCanvas.width, scanCanvas.height, {
-            inversionAttempts: "dontInvert",
-          });
+        // Draw the current video frame into our hidden scanCanvas
+        scanCtx.drawImage(video, 0, 0, scanCanvas.width, scanCanvas.height);
+        const imageData = scanCtx.getImageData(0, 0, scanCanvas.width, scanCanvas.height);
+        const code = jsQR(imageData.data, scanCanvas.width, scanCanvas.height, {
+          inversionAttempts: "dontInvert",
+        });
 
-          if (code) {
-            // Found a QR code
-            lastDetectionTime = timestamp;  // update detection time
-            detectionInfo = {
-              corners: code.location,
-              data: code.data
-            };
+        if (code) {
+          // Found a QR code -> pause scanning
+          scanningPaused = true;
+          detectionInfo = {
+            corners: code.location,
+            data: code.data
+          };
 
-            // Pause scanning so we don't detect multiple codes quickly
-            scanningPaused = true;
+          // Load the corresponding 2D image (if available)
+          if (codeToImage[code.data]) {
+            overlayImg.src = codeToImage[code.data];
+          } else {
+            overlayImg.src = "";
+          }
 
-            // Show the "Enable Audio" button now that code is detected
+          // If there's an audio associated with this code, set it
+          if (codeToAudio[code.data]) {
+            qrAudio.src = codeToAudio[code.data];
+          } else {
+            // If no audio is associated, you can set an empty string or fallback
+            qrAudio.src = "";
+          }
+
+          // If user has not enabled audio, show the button now
+          if (!audioEnabled) {
             enableAudioBtn.style.display = "block";
-
-            // Check if the decoded text matches one of our codes
-            if (codeToImage[code.data]) {
-              // If yes, load that image
-              overlayImg.src = codeToImage[code.data];
-            } else {
-              // Otherwise, clear the overlay image or use fallback
-              overlayImg.src = "";
-            }
+          } else {
+            // Audio is already enabled -> play it automatically
+            qrAudio.currentTime = 0;
+            qrAudio.play().catch(err => {
+              console.warn("Audio playback blocked or failed:", err);
+            });
           }
         }
       }
 
-      // If we have a recent detection (within the last second), draw the overlay
-      if (detectionInfo && timestamp - lastDetectionTime < 1000) {
+      // 6c) If scanning is paused (code found) and we have detection info, show overlay
+      if (scanningPaused && detectionInfo) {
         info.textContent = "QR Data: " + detectionInfo.data;
         drawCorners(detectionInfo.corners);
         drawImageOverCode(detectionInfo.corners);
       } else {
-        info.textContent = "Scanning for QR Code...";
+        // Otherwise, scanning for a new code
+        if (!detectionInfo) {
+          info.textContent = "Scanning for QR Code...";
+        }
       }
 
       requestAnimationFrame(tick);
     }
 
-    // Draw a polygon around the code (optional)
+    /************************************************************************
+     * 7) Drawing Functions (Optional)
+     ************************************************************************/
+    // Draw polygon around the code
     function drawCorners(location) {
       const { topLeftCorner, topRightCorner, bottomRightCorner, bottomLeftCorner } = location;
       overlayCtx.beginPath();
@@ -219,7 +267,7 @@
       const w = maxX - minX;
       const h = maxY - minY;
 
-      // If overlayImg.src is set (not ""), draw it
+      // If overlayImg.src is not empty, draw it
       if (overlayImg.src) {
         overlayCtx.drawImage(overlayImg, minX, minY, w, h);
       }
