--- a/3dtest.html
+++ b/3dtest.html
@@ -8,10 +8,20 @@
   <!-- jsQR for scanning -->
   <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 
-  <!-- THREE.js (core) -->
+  <!-- THREE.js (core) 
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  <!-- GLTFLoader (for loading .gltf or .glb) -->
+  GLTFLoader (for loading .gltf or .glb)
   <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
+  -->
+  <script type = "importmap">
+    {
+        "imports":{
+            "three":"https://cdn.jsdelivr.net/npm/three@0.174.0/build/three.module.js",
+            "three/addons/":"https://cdn.jsdelivr.net/npm/three@0.174.0/examples/js/loaders/GLTFLoader.js"
+        }
+    }
+  </script>  
+
 
   <style>
     body {
@@ -95,6 +105,8 @@
   <div id="threeContainer"></div>
 
   <script>
+    import * as THREE from 'three';
+    
     /***********************************************************
      * 1) Data structures for code -> model, code -> audio, etc.
      ***********************************************************/
