change to script

--- a/3dtest.html
+++ b/3dtest.html
@@ -8,11 +8,11 @@
   <!-- jsQR for scanning -->
   <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
 
-  <!-- THREE.js (core) 
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/build/three.min.js"></script>
-  GLTFLoader (for loading .gltf or .glb)
-  <script src="https://cdn.jsdelivr.net/npm/three@0.152.2/examples/js/loaders/GLTFLoader.js"></script>
-  -->
+  <!-- THREE.js (core) -->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.174.0/build/three.min.js"></script>
+  <!--GLTFLoader (for loading .gltf or .glb)-->
+  <script src="https://cdn.jsdelivr.net/npm/three@0.174.0/examples/js/loaders/GLTFLoader.js"></script>
+  <!--
   <script type = "importmap">
     {
         "imports":{
@@ -21,7 +21,7 @@
         }
     }
   </script>  
-
+-->
 
   <style>
     body {
@@ -105,8 +105,8 @@
   <div id="threeContainer"></div>
 
   <script>
-    import * as THREE from 'three';
-    
+    //import * as THREE from 'three';
+
     /***********************************************************
      * 1) Data structures for code -> model, code -> audio, etc.
      ***********************************************************/
