--- a/3dmin.html
+++ b/3dmin.html
@@ -11,8 +11,8 @@
   And also load the example loader from the jsm/ directory.
 -->
 <script type="module">
-  import * as THREE from 'https://unpkg.com/three@0.174.0/build/three.module.js';
-  import { GLTFLoader } from 'https://unpkg.com/three@0.174.0/examples/jsm/loaders/GLTFLoader.js';
+  import * as THREE from 'https://cdn.jsdelivr.net/npm/three@0.174.0/build/three.module.js';
+  import { GLTFLoader } from 'https://cdn.jsdelivr.net/npm/three@0.174.0/examples/jsm/loaders/GLTFLoader.js';
 
   // Now we have THREE.* and the named GLTFLoader.
   const scene = new THREE.Scene();
