--- a/3dmin2.html
+++ b/3dmin2.html
@@ -1,15 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <meta charset="UTF-8" />
-  <title>Three.js + GLTFLoader with ImportMap</title>
-
-  <!-- 1) Import map to resolve bare imports "three" and "three/examples/jsm/loaders/GLTFLoader.js" -->
+  <meta charset="UTF-8">
+  <title>Three.js GLB Test</title>
+  
+  <!-- 1) Import map for three.js and GLTFLoader -->
   <script type="importmap">
   {
     "imports": {
       "three": "https://cdn.jsdelivr.net/npm/three@0.174.0/build/three.module.js",
-      "three/examples/jsm/loaders/GLTFLoader.js": "https://cdn.jsdelivr.net/npm/three@0.174.0/examples/jsm/loaders/GLTFLoader.js"
+      "three/examples/jsm/loaders/GLTFLoader.js": 
+        "https://cdn.jsdelivr.net/npm/three@0.174.0/examples/jsm/loaders/GLTFLoader.js"
     }
   }
   </script>
@@ -17,115 +18,86 @@
   <style>
     body {
       margin: 0;
-      overflow: hidden;
-      font-family: sans-serif;
+      overflow: hidden; /* No scrollbars */
       background: #000;
     }
-    #info {
-      position: absolute;
-      top: 0; left: 0;
-      z-index: 999;
-      background: rgba(0,0,0,0.5);
-      color: #fff;
-      padding: 0.5em;
-    }
-    #video, #overlayCanvas {
-      position: absolute;
-      top: 0; left: 0;
-    }
-    /* We'll keep the scanCanvas hidden; only used for jsQR scanning */
-    #scanCanvas { display: none; }
-    /* Container for Three.js scene (we'll just reuse the body for now) */
   </style>
 </head>
 <body>
-  <div id="info">Initializing camera...</div>
-
-  <!-- 2) jsQR for QR scanning -->
-  <script src="https://cdn.jsdelivr.net/npm/jsqr/dist/jsQR.js"></script>
-
-  <!-- 3) Our main script as an ES module -->
   <script type="module">
-    /********************************************************
-     * A) Import the necessary classes via the import map
-     ********************************************************/
+    /*******************************************************************
+     * A) Import from the CDN via the Import Map
+     *******************************************************************/
     import * as THREE from 'three';
     import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
 
-    /********************************************************
-     * B) Minimal scanning setup (no lines or advanced logic)
-     ********************************************************/
-    const info = document.getElementById('info');
-    const video = document.createElement('video');
-    video.setAttribute('playsinline', true); // iOS Safari quick fix
-    video.style.position = 'absolute';
-    video.style.top = '0';
-    video.style.left = '0';
-    document.body.appendChild(video);
-
-    const overlayCanvas = document.createElement('canvas');
-    overlayCanvas.style.position = 'absolute';
-    overlayCanvas.style.top = '0';
-    overlayCanvas.style.left = '0';
-    document.body.appendChild(overlayCanvas);
-    const overlayCtx = overlayCanvas.getContext('2d');
-
-    const scanCanvas = document.createElement('canvas');
-    const scanCtx = scanCanvas.getContext('2d');
-
-    let scanning = true;
-    let lastScanTime = 0;
-
-    // We'll check for code "01" -> load a GLB model
-    const codeToModel = {
-      "01": "https://www.9mtx.com/ar_demo/3D/castle2.glb"
-      // add more codes & paths if desired
-    };
-
-    // Set up camera
-    navigator.mediaDevices.getUserMedia({video: {facingMode: 'environment'}})
-      .then((stream) => {
-        video.srcObject = stream;
-        video.play();
-        requestAnimationFrame(tick);
-      })
-      .catch((err) => {
-        info.textContent = "Error accessing camera: " + err;
-      });
-
-
-    /********************************************************
-     * C) Three.js scene
-     ********************************************************/
+    /*******************************************************************
+     * B) Basic Scene, Camera, Renderer
+     *******************************************************************/
     let scene, camera, renderer, loader;
-    let modelLoaded = false;
 
-    function initThreeJS() {
+    init();
+    animate();
+
+    function init() {
+      // Create a scene
       scene = new THREE.Scene();
 
+      // Create a perspective camera
       camera = new THREE.PerspectiveCamera(
-        60,
+        60, 
         window.innerWidth / window.innerHeight,
-        0.1,
+        0.1, 
         1000
       );
-      camera.position.set(0, 1, 3);
+      // Position it a little away from origin so we see objects
+      camera.position.set(0, 1, 5);
 
-      // Lights
+      // Create renderer
+      renderer = new THREE.WebGLRenderer({ antialias: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      document.body.appendChild(renderer.domElement);
+
+      // Listen for window resize
+      window.addEventListener('resize', onWindowResize);
+
+      // Add some lights so the model isn't black
       const ambientLight = new THREE.AmbientLight(0xffffff, 0.4);
       scene.add(ambientLight);
+
       const dirLight = new THREE.DirectionalLight(0xffffff, 1);
       dirLight.position.set(5, 10, 7);
       scene.add(dirLight);
 
-      renderer = new THREE.WebGLRenderer({antialias:true});
-      renderer.setSize(window.innerWidth, window.innerHeight);
-      document.body.appendChild(renderer.domElement);
-
+      // Create the GLTFLoader
       loader = new GLTFLoader();
 
-      window.addEventListener('resize', onWindowResize);
-      animate();
+      // Load a GLB or GLTF model, e.g., a test model from your server
+      // Replace the URL below with your actual .glb path
+      loader.load(
+        'https://www.9mtx.com/ar_demo/3D/castle2.glb',
+        (gltf) => {
+          const model = gltf.scene;
+          scene.add(model);
+
+          // Optional: center the model so it's at (0,0,0)
+          const box = new THREE.Box3().setFromObject(model);
+          const center = box.getCenter(new THREE.Vector3());
+          model.position.sub(center); // move the model so its center is at the origin
+
+          // Move the camera back to see the entire model
+          const size = box.getSize(new THREE.Vector3());
+          const maxDim = Math.max(size.x, size.y, size.z);
+          camera.position.set(0, 0, maxDim * 1.5);
+
+          // Look at the origin
+          camera.lookAt(0, 0, 0);
+        },
+        undefined,
+        (error) => {
+          console.error('Error loading GLB model:', error);
+        }
+      );
     }
 
     function onWindowResize() {
@@ -134,60 +106,13 @@
       renderer.setSize(window.innerWidth, window.innerHeight);
     }
 
+    /*******************************************************************
+     * C) Render Loop
+     *******************************************************************/
     function animate() {
       requestAnimationFrame(animate);
-      if (renderer && scene && camera) {
-        renderer.render(scene, camera);
-      }
+      renderer.render(scene, camera);
     }
-
-    function loadModel(glbURL) {
-      if (!loader) {
-        initThreeJS(); // in case we haven't already
-      }
-      loader.load(
-        glbURL,
-        (gltf) => {
-          scene.add(gltf.scene);
-
-          // Optional: Center the model
-          const box = new THREE.Box3().setFromObject(gltf.scene);
-          const center = box.getCenter(new THREE.Vector3());
-          gltf.scene.position.sub(center);
-
-          // Move camera back to see entire object
-          const size = box.getSize(new THREE.Vector3());
-          const maxDim = Math.max(size.x, size.y, size.z);
-          camera.position.set(0, 0, maxDim * 1.5);
-
-          camera.lookAt(0, 0, 0);
-          modelLoaded = true;
-
-          // Hide the video/canvas if you want full 3D
-          video.style.display = 'none';
-          overlayCanvas.style.display = 'none';
-        },
-        undefined,
-        (error) => {
-          console.error("Error loading GLB:", error);
-        }
-      );
-    }
-
-    /********************************************************
-     * D) The main loop to scan once every 1 second
-     ********************************************************/
-    function tick(timestamp) {
-      if (!scanning) return;
-
-      if (video.readyState === video.HAVE_ENOUGH_DATA) {
-        overlayCanvas.width = video.videoWidth;
-        overlayCanvas.height = video.videoHeight;
-        overlayCtx.drawImage(video, 0, 0, overlayCanvas.width, overlayCanvas.height);
-
-        if (timestamp - lastScanTime > 1000) {
-          lastScanTime = timestamp;
-          scanCanvas.width = video.videoWidth;
-          scanCanvas.height = video.videoHeight;
-          scanCtx.drawImage(video, 0, 0, scanCanvas.width, scanCanvas.height);
-          const imageData = scanCtx.getImageData(0, 0, scanCanvas
+  </script>
+</body>
+</html>
