--- a/3dtest4.html
+++ b/3dtest4.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Device Orientation AR Demo (Tap to Start)</title>
+  <title>Tap to Start AR (Debug Version)</title>
 
   <!-- 1) Import map for three.js and GLTFLoader -->
   <script type="importmap">
@@ -31,9 +31,21 @@
       padding: 0.5em;
       max-width: 90%;
     }
-    /* Camera feed behind the 3D canvas */
+    #debugLog {
+      position: absolute;
+      bottom: 0; left: 0;
+      z-index: 9999;
+      background: rgba(0,0,0,0.7);
+      color: #0f0;
+      font-size: 0.9em;
+      max-height: 40%;
+      width: 100%;
+      overflow-y: scroll;
+      padding: 0.5em;
+      box-sizing: border-box;
+    }
     #video {
-      display: none; /* Hidden until user taps "Start AR" */
+      display: none;
       position: absolute;
       top: 0; left: 0;
       width: 100%;
@@ -41,7 +53,6 @@
       object-fit: cover;
       z-index: 1;
     }
-    /* 3D container on top */
     #threeContainer {
       position: absolute;
       top: 0; left: 0;
@@ -49,46 +60,37 @@
       height: 100%;
       z-index: 2;
     }
-    /* Button to begin AR */
     #startBtn {
       position: absolute;
-      top: 50%;
-      left: 50%;
+      top: 50%; left: 50%;
       transform: translate(-50%, -50%);
-      z-index: 1000;
       padding: 1em 2em;
       font-size: 1.2em;
       background: #333;
       color: #fff;
       border: none;
       cursor: pointer;
+      z-index: 1000;
     }
   </style>
 </head>
-
 <body>
   <div id="info">Tap "Start AR" to begin</div>
 
-  <!-- Button to start camera + AR -->
   <button id="startBtn">Start AR</button>
 
-  <!-- Video background -->
-  <video id="video" playsinline muted></video>
+  <!-- Debug log overlay -->
+  <div id="debugLog"></div>
 
-  <!-- 3D container -->
+  <video id="video" playsinline muted autoplay></video>
   <div id="threeContainer"></div>
 
   <script type="module">
-    /***********************************************************
-     * A) Imports
-     ***********************************************************/
     import * as THREE from 'three';
     import { GLTFLoader } from 'three/examples/jsm/loaders/GLTFLoader.js';
 
-    /***********************************************************
-     * B) DOM Elements & State
-     ***********************************************************/
     const infoDiv = document.getElementById('info');
+    const debugDiv = document.getElementById('debugLog');
     const startBtn = document.getElementById('startBtn');
     const video = document.getElementById('video');
     const threeContainer = document.getElementById('threeContainer');
@@ -97,19 +99,153 @@
     let model;
     let deviceOrientationActive = false;
 
-    /***********************************************************
-     * C) Start AR Button Handler
-     ***********************************************************/
+    // Helper for logging on-screen
+    function logMessage(msg) {
+      console.log(msg);
+      debugDiv.textContent += msg + "\n";
+    }
+
+    // Start AR button event
     startBtn.addEventListener('click', () => {
-      console.log("User tapped Start AR. Requesting camera...");
+      alert("Start AR button clicked!");  // Just to confirm button truly fires
+      logMessage("User clicked Start AR button...");
+
+      if (!navigator.mediaDevices || !navigator.mediaDevices.getUserMedia) {
+        logMessage("ERROR: navigator.mediaDevices.getUserMedia is not available!");
+        infoDiv.textContent = "Camera not supported on this device/browser.";
+        return;
+      }
+
+      logMessage("Requesting camera with { video: true } (any camera)...");
       infoDiv.textContent = "Requesting camera permission...";
 
-      // We do getUserMedia in the same user gesture to ensure the prompt appears
-      navigator.mediaDevices.getUserMedia({ video: { facingMode: 'environment' } })
+      // Using simpler constraints => {video: true} first
+      navigator.mediaDevices.getUserMedia({ video: true })
         .then(stream => {
-          console.log("Camera granted:", stream);
-          // Show the video on screen
+          logMessage("Got camera stream successfully.");
           video.style.display = "block";
           video.srcObject = stream;
-          // Also call video.play() in the same gesture if possible
-          
+          // Start playing right away
+          return video.play();
+        })
+        .then(() => {
+          logMessage("Video is playing now!");
+          startBtn.style.display = "none";
+          infoDiv.textContent = "Camera running. Loading 3D scene...";
+
+          // Now set up Three.js
+          initThreeJS();
+          animate();
+          requestDeviceOrientation();
+        })
+        .catch(err => {
+          logMessage("ERROR getting camera: " + err);
+          infoDiv.textContent = "Error accessing camera: " + err;
+        });
+    });
+
+    function initThreeJS() {
+      logMessage("Initializing Three.js scene...");
+
+      scene = new THREE.Scene();
+      camera = new THREE.PerspectiveCamera(60, window.innerWidth / window.innerHeight, 0.1, 1000);
+      camera.position.set(0, 1, 5);
+
+      renderer = new THREE.WebGLRenderer({ antialias: true, alpha: true });
+      renderer.setSize(window.innerWidth, window.innerHeight);
+      threeContainer.appendChild(renderer.domElement);
+
+      // Lights
+      const ambient = new THREE.AmbientLight(0xffffff, 0.4);
+      scene.add(ambient);
+
+      const directional = new THREE.DirectionalLight(0xffffff, 1);
+      directional.position.set(5, 10, 7);
+      scene.add(directional);
+
+      // GLTF Model
+      const loader = new GLTFLoader();
+      loader.load(
+        'https://www.9mtx.com/ar_demo/3D/castle2.glb',
+        gltf => {
+          logMessage("3D model loaded from URL.");
+          model = gltf.scene;
+          scene.add(model);
+
+          // center model
+          const box = new THREE.Box3().setFromObject(model);
+          const center = box.getCenter(new THREE.Vector3());
+          model.position.sub(center);
+
+          const size = box.getSize(new THREE.Vector3());
+          const maxDim = Math.max(size.x, size.y, size.z);
+          camera.position.set(0, 0, maxDim * 2);
+          camera.lookAt(0, 0, 0);
+
+          infoDiv.textContent = "Model loaded. Tilt phone for orientation.";
+        },
+        undefined,
+        err => {
+          logMessage("Error loading model: " + err);
+          infoDiv.textContent = "Error loading 3D model.";
+        }
+      );
+
+      window.addEventListener('resize', onWindowResize);
+    }
+
+    function onWindowResize() {
+      if (!camera || !renderer) return;
+      camera.aspect = window.innerWidth / window.innerHeight;
+      camera.updateProjectionMatrix();
+      renderer.setSize(window.innerWidth, window.innerHeight);
+    }
+
+    function animate() {
+      requestAnimationFrame(animate);
+      renderer.render(scene, camera);
+    }
+
+    // DeviceOrientation
+    function requestDeviceOrientation() {
+      logMessage("Requesting device orientation permission if needed...");
+      if (typeof DeviceOrientationEvent !== 'undefined' &&
+          typeof DeviceOrientationEvent.requestPermission === 'function') {
+        DeviceOrientationEvent.requestPermission()
+          .then(response => {
+            if (response === 'granted') {
+              deviceOrientationActive = true;
+              logMessage("Device orientation granted by user!");
+              window.addEventListener('deviceorientation', onDeviceOrientation);
+              infoDiv.textContent += " (Motion OK)";
+            } else {
+              logMessage("Device orientation permission NOT granted. Response: " + response);
+              infoDiv.textContent += " (No motion permission)";
+            }
+          })
+          .catch(err => {
+            logMessage("Error requesting device orientation: " + err);
+          });
+      } else {
+        logMessage("deviceorientation event does not need requestPermission");
+        deviceOrientationActive = true;
+        window.addEventListener('deviceorientation', onDeviceOrientation);
+      }
+    }
+
+    function onDeviceOrientation(event) {
+      if (!camera || !deviceOrientationActive) return;
+
+      const alpha = event.alpha ? THREE.MathUtils.degToRad(event.alpha) : 0;
+      const beta  = event.beta  ? THREE.MathUtils.degToRad(event.beta)  : 0;
+      const gamma = event.gamma ? THREE.MathUtils.degToRad(event.gamma) : 0;
+
+      // Every few frames, log to debug
+      // (comment out for production)
+      // logMessage(`Orientation => alpha:${alpha.toFixed(2)}, beta:${beta.toFixed(2)}, gamma:${gamma.toFixed(2)}`);
+
+      camera.rotation.set(beta, alpha, -gamma, 'YXZ');
+    }
+  </script>
+</body>
+</html>
